KGS-17
Introduce new method in Product controller to support for list of itemIds to get details in one call from order-service.